--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   lcov-base:
     description: The location of the lcov file for the base branch
     required: false
+  minimum-coverage-percentage:
+    description: indicates a value for wat coverage percentage will be required for the check to pass
+    required: false
 runs:
   using: node12
   main: dist/main.js
